editing the report details
